# microservices

./: README.md
nameko-basic-http/: .gitignore  README.rst  pyproject.toml
nameko-basic-http/nameko_basic_http/: Dockerfile  config.yaml  helloworld.py
nameko-basic-http/nameko_basic_http.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nameko-basic-http/tests/: test_nameko_basic_http.py
