[tool.poetry]
name = "nameko-basic-http"
version = "0.1.0"
description = ""
authors = ["Kostas Konstantopoulos <ntopoulos@yahoo.com>"]

[tool.poetry.dependencies]
python = "^2.7"
nameko = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
